[gd_scene load_steps=6 format=2]

[ext_resource path="res://type_writer.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://DialogBox.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
size = 6
font_data = ExtResource( 1 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 43.7601
height = 68.633

[node name="dialog_box" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 41.8926
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Text"
tab_size = 0
text = "Text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Person Speaking background" type="TextureRect" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = -235.0
margin_top = -142.891
margin_right = -133.0
margin_bottom = -66.8909
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 61.5612, 63.3163 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Sprite"]
position = Vector2( -0.561249, 1.6837 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 0.561249, -1.12248 )
rotation = 1.5708
shape = SubResource( 2 )
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="area_entered" from="Sprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Sprite/Area2D" to="." method="_on_Area2D_area_exited"]
